<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/hot_spot">
        <menu>
        <item
            android:id="@+id/request_confirm"
            android:title="@string/request_confirm"
            app:actionLayout="@layout/menu_counter"/>
        <item
            android:id="@+id/cancel_refund"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/cancel_refund" />
        <item
            android:id="@+id/used_complete"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/used_complete" />
        </menu>
    </item>

    <item android:title="@string/host_center">
        <menu>
            <item
                android:id="@+id/registration_space"
                app:actionLayout="@layout/menu_counter"
                android:title="@string/registration_space" />
            <item
                android:id="@+id/management_space"
                app:actionLayout="@layout/menu_counter"
                android:title="@string/managemanet_space" />
            <item
                android:id="@+id/terms_of_use"
                app:actionLayout="@layout/menu_counter"
                android:title="@string/terms_of_use" />
        </menu>
    </item>

</menu>
