<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01000000"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/title_imageview"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-5dp"
                android:textColor="@android:color/black"
                android:textSize="35dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sub_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorTextBackground"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"></RelativeLayout>

            <LinearLayout
                android:id="@+id/space_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/colorPrimary">

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/won"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:id="@+id/total_fee_text"
                        android:textColor="@color/colorPrimary"
                        android:textSize="40dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/fee_hour_text"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/introduce"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="15dp"
                android:layout_height="4dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"></RelativeLayout>

            <TextView
                android:id="@+id/introduce_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorTextGray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/available_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/available_time"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/available_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorTextGray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/holidays"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/holidays_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorTextGray" />
            </LinearLayout>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/facility"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="15dp"
                android:layout_height="4dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"></RelativeLayout>

            <TextView
                android:id="@+id/facility_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorTextGray" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cautions"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="15dp"
                android:layout_height="4dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"></RelativeLayout>

            <TextView
                android:id="@+id/cautions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorTextGray" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/address_title"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorTextGray" />

                <TextView
                    android:id="@+id/address_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextGray" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>